--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           go-version: 1.17
 
-#      - name: Lint
-#        uses: golangci/golangci-lint-action@v2
+      - name: Lint
+        uses: golangci/golangci-lint-action@v2
 
       - name: Test
         run: go test -v -race ./...
